--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.13.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.758.0",
+    "@octokit/rest": "^21.1.1",
+    "js-yaml": "^4.1.0"
   }
 }
