--- a/.github/workflows/patchmate.yml
+++ b/.github/workflows/patchmate.yml
@@ -2,16 +2,20 @@ name: PatchMate Dependency Check
 
 on:
   schedule:
-    - cron: "0 0 * * 0"  # Runs at midnight every Sunday (GitHub uses 0 for Sunday)
+    - cron: "0 0 * * 0"  # Runs every Sunday
   push:
     paths:
       - "package.json"
       - "package-lock.json"
-  workflow_dispatch:  # Allows manual trigger
   pull_request:
     paths:
       - "package.json"
       - "package-lock.json"
+  workflow_dispatch:  # Allows manual execution
+
+permissions:
+  id-token: write   # Required for OIDC authentication with AWS
+  contents: read
 
 jobs:
   patchmate:
@@ -20,17 +24,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: arn:aws:iam::573451623612:role/GitHubActions-PatchMate
+          aws-region: us-east-1
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'npm'
 
-      - name: Install PatchMate
-        run: npm install -g patchmate
+      - name: Install Dependencies
+        run: npm install
 
       - name: Run PatchMate Scan
-        run: patchmate scan
+        run: npx ts-node src/patchmate.ts
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          AWS_REGION: us-east-1
