--- a/.github/workflows/patchmate.yml
+++ b/.github/workflows/patchmate.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - "package.json"
       - "package-lock.json"
+      - "README.md"
   pull_request:
     paths:
       - "package.json"
