Fix for actions trying to run the ts files instead of the dist/patchmate.js file.

--- a/.github/workflows/patchmate.yml
+++ b/.github/workflows/patchmate.yml
@@ -40,7 +40,10 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name: Compile TypeScript
+        run: npx tsc
+
       - name: Run PatchMate Scan
-        run: npx ts-node src/patchmate.ts
+        run: node dist/patchmate.js  # Run compiled JS instead of TS
         env:
           AWS_REGION: us-east-1
