--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "patchmate",
   "version": "1.0.0",
   "description": "AI-driven dependency updates that suggest code changes and auto-patches your repo.",
-  "main": "index.js",
+  "main": "dist/patchmate.js",
+  "bin": {
+    "patchmate": "dist/patchmate.js"
+  },
   "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "patchmate": "node dist/patchmate.js"
+    "patchmate": "node dist/patchmate.js",
+    "build": "tsc",
+    "prepublishOnly": "npm run build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["npm", "dependency", "automation", "AI"],
+  "author": "Geoff Godwin",
+  "license": "Apache-2.0",
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.13.10",
