Updated dist to include entire folder.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "patchmate",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "AI-driven dependency updates that suggest code changes and auto-patches your repo.",
   "main": "dist/patchmate.js",
   "bin": {
@@ -13,6 +13,9 @@
     "build": "tsc",
     "prepublishOnly": "npm run build"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "npm",
     "dependency",
@@ -24,7 +27,6 @@
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.13.10",
-    "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
   "dependencies": {
