Added .patchmate.yml to the output files for config.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prepublishOnly": "npm run build"
   },
   "files": [
-    "dist"
+    "dist",
+    ".patchmate.yml"
   ],
   "keywords": [
     "npm",
